Fix a few trivial Eclipse and SonarQube warnings.